# bert_inference

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: bert_pipeline.py  milti_task_dag.py
data/processed/: processed_reviews.csv
data/raw/: reviews.csv
prediction_project/: logger.py
prediction_project/client/: client.py
prediction_project/constants/: constants.py
prediction_project/model/: model.py
prediction_project/predict/: predict.py
prediction_project/processing/: processor.py
prediction_project/workers/: worker.py
