[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "prediction_project"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "apache-airflow>=3.1.3",
    "black",
    "flake8",
    "hf-xet>=1.2.0",
    "isort",
    "loguru",
    "mkdocs",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "path>=17.1.1",
    "pip",
    "python-dotenv",
    "torch>=2.9.1",
    "tqdm",
    "transformers>=4.57.2",
    "typer",
]
requires-python = ">=3.11"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["etl_project"]
force_sort_within_sections = true


